<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bgimg"
    android:orientation="vertical"
    >
    <!--广百LOGO-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/login_content" />

    <LinearLayout
        android:id="@+id/login_msg_input_ll"
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            style="@style/Text18Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login_title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@color/color_white"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            >

            <TextView
                style="@style/Text18Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_uid"
                />

            <EditText
                android:id="@+id/id_login_username_et"
                style="@style/Text18Style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start|center"
                android:inputType="number"
                android:paddingLeft="@dimen/size_8dp"
                android:drawableRight="@drawable/man"
                android:selectAllOnFocus="true"
                />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                >
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/div_line3">
            </View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            >

            <TextView
                style="@style/Text18Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_pwd"
                />

            <EditText
                android:id="@+id/id_login_password_et"
                style="@style/Text18Style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start|center"
                android:inputType="numberPassword"
                android:paddingLeft="@dimen/size_8dp"
                android:drawableRight="@drawable/setting_password"
                android:selectAllOnFocus="true"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/div_line3">
            </View>
        </LinearLayout>
    </LinearLayout>

    <!--点击登陆按钮-->
    <TextView
        android:id="@+id/id_login_btok"
        style="@style/Button16Style"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button1_radius"
        android:gravity="center"
        android:text="@string/login_btok"
        android:layout_below="@+id/login_msg_input_ll"
        android:layout_alignStart="@+id/login_msg_input_ll" />

    <LinearLayout
        android:id="@+id/save_toolbar"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_below="@+id/id_login_btok"
        android:layout_alignStart="@+id/id_login_btok">
        <!--保存密码-->
        <CheckBox
            android:id="@+id/id_login_savepwd"
            style="@style/Text16Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_savepwd"/>
        <TextView
            android:layout_width="@dimen/size_0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/id_login_setting"
            style="@style/Text16Style"
            android:layout_marginRight="@dimen/size_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/size_4dp"
            android:drawableLeft="@drawable/setting_unselected"
            android:text="设置" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_toolbar"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_below="@+id/save_toolbar"
        android:layout_alignStart="@+id/save_toolbar"
        android:weightSum="1">
    </LinearLayout>

    <!--警告提醒-->
    <TextView
        android:id="@+id/id_login_alertinfo"
        style="@style/AlertStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/login_error_alert"
        android:drawablePadding="2dp"
        android:text="@string/login_errormsg"
        android:layout_below="@+id/set_toolbar"
        android:layout_centerHorizontal="true" />

    <!--底部LOGO-->
    <LinearLayout
        android:id="@+id/login_bottom_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/login_shortname"
            android:textColor="@color/color_text"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rename"
            android:contentDescription="@string/login_content"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/cashier_quickly_logo"
            android:contentDescription="@string/login_content"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_version"
        android:textColor="@color/color_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/text_20sp"
        android:layout_centerHorizontal="true" />


</RelativeLayout>