<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.synics.gymp.activity.MainActivity">
    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_txt_tab_cash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_cash_channel"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_cash_caption"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="@dimen/size_14dp" />

        <TextView
            android:id="@+id/id_txt_tab_query"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_query_channel"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_query_caption"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="@dimen/size_14dp" />

        <TextView
            android:id="@+id/id_txt_tab_trans"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_trans_channel"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_trans_caption"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="@dimen/size_14dp" />

        <TextView
            android:id="@+id/id_txt_tab_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_setting_channel"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_setting_caption"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="@dimen/size_14dp"/>

    </LinearLayout>

    <View
        android:id="@+id/id_div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/color_white"
        android:layout_above="@id/ly_tab_bar"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/id_div_tab_bar"
        android:id="@+id/id_ly_main_content">

    </FrameLayout>
</RelativeLayout>
