<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_winbg"
    tools:context="com.synics.gymp.fragment.CashFragment">

    <RelativeLayout
        android:id="@+id/query_top_panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_headpanel"
        android:background="@color/color_titlebg">

        <TextView
            android:id="@+id/query_top_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/fontsize_headpanel"
            android:textColor="@color/color_white"
            android:text="@string/tab_query_caption"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_funbutton"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <TextView
            style="@style/FunButtonStyle"
            android:id="@+id/id_query_daybillrep"
            android:drawableTop="@drawable/order_daily"
            android:text="@string/txt_query_daybillrep_title"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <TextView
            style="@style/FunButtonStyle"
            android:id="@+id/id_query_daysellrep"
            android:drawableTop="@drawable/sales_daily"
            android:text="@string/txt_query_daysellrep_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_border"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_funbutton"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <TextView
            style="@style/FunButtonStyle"
            android:id="@+id/id_query_payquery"
            android:drawableTop="@drawable/payment_query"
            android:text="@string/txt_query_payquery_title"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <TextView
            style="@style/FunButtonStyle"
            android:id="@+id/id_query_logquery"
            android:drawableTop="@drawable/sign_and_sign_out_daily"
            android:text="@string/txt_query_logquery_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_border"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_funbutton"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <TextView
            style="@style/FunButtonStyle"
            android:id="@+id/id_query_goodsquery"
            android:drawableTop="@drawable/commodity_information_inquiry"
            android:text="@string/txt_query_goodsquery_title"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_winbg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_border"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_winbg"/>
    </LinearLayout>
</LinearLayout>
