<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.synics.gymp.activity.LoginSettingActivity">
    <RelativeLayout
        android:id="@+id/query_top_panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_headpanel"
        android:background="@color/color_titlebg">
        <TextView
            android:id="@+id/id_common_query_title"
            style="@style/WindowTitle"
            android:text="@string/txt_login_setting_title"/>

        <ImageView
            style="@style/ReturnButtonStyle"
            android:tag="returnbutton"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/id_loginset_panel"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:orientation="vertical"
        >
        <TextView
            style="@style/Text18Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginset_txt_serverurl"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:background="@drawable/input_radius"
            >

            <EditText
                android:id="@+id/id_loginset_url1"
                style="@style/IpInpStyle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_dot"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/size_20dp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/id_loginset_url2"
                style="@style/IpInpStyle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_dot"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/size_20dp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/id_loginset_url3"
                style="@style/IpInpStyle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_dot"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/size_20dp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/id_loginset_url4"
                style="@style/IpInpStyle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_colon"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/size_20dp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/id_loginset_port"
                style="@style/Text18Style"
                android:layout_width="64dp"
                android:layout_height="@dimen/size_48dp"
                android:maxLines="1"
                android:maxLength="5"
                android:background="@null"
                android:gravity="start|center"
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:paddingLeft="@dimen/size_8dp"
                />
        </LinearLayout>

        <TextView
            style="@style/Text18Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/loginset_txt_counterid"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:background="@drawable/input_radius"
            >

            <EditText
                android:id="@+id/id_loginset_counterid"
                style="@style/Text18Style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48dp"
                android:maxLines="1"
                android:maxLength="8"
                android:background="@null"
                android:gravity="start|center"
                android:paddingLeft="@dimen/size_16dp"
                android:selectAllOnFocus="true"
                android:inputType="number"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            >

            <TextView
                android:id="@+id/id_loginset_btok"
                style="@style/Button16Style"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                android:background="@drawable/button1_radius"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/button_txt_ok"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
