<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_winbg"
    tools:context="com.synics.gymp.fragment.CashFragment">

    <RelativeLayout
        android:id="@+id/query_top_panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_headpanel"
        android:background="@color/color_titlebg">

        <TextView
            android:id="@+id/query_top_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/fontsize_headpanel"
            android:textColor="@color/color_white"
            android:text="@string/tab_trans_caption"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_funbutton"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <TextView
            style="@style/FunButtonStyle"
            android:id="@+id/id_tran_billdo"
            android:drawableTop="@drawable/order_processing"
            android:text="@string/txt_tran_billdo_title"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <TextView
            style="@style/FunButtonStyle"
            android:id="@+id/id_tran_storedo"
            android:drawableTop="@drawable/inventory_change"
            android:text="@string/txt_tran_storedo_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_border"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_funbutton"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <TextView
            style="@style/FunButtonStyle"
            android:id="@+id/id_tran_billtoerp"
            android:drawableTop="@drawable/order_processing"
            android:text="订单上传"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <TextView
            style="@style/FunButtonStyle"
            android:id="@+id/id_tran_billtorefund"
            android:drawableTop="@drawable/order_processing"
            android:text="订单撤销"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_border"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_border"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_border"/>
    </LinearLayout>
</LinearLayout>
